src/scss/cards.scss
/* ... */
.hp-tracker-vertical-right {

  list-style: none;
  text-align: right;
  display: block;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0.2in;
  right: $border;
  z-index: 99;
  font-size: $base;

  li {
    line-height: 1;
    padding-bottom: 4.3pt;
  }
}

.hp-tracker-horizontal, .counter-horizontal {

  list-style: none;
  display: block;
  margin: 0;
  padding: 0 10pt 0.03in 10pt;
  position: absolute;
  right: $border;
  bottom: 0.1in;
  font-size: $base;
  text-align: center;

  td {
    padding: 0.05in;
  }
}

.counter-horizontal {
  margin: auto;
  padding: 0;
  left: 0;
  right: 0;
  bottom: -0.1in;

  span {
    padding: 0 0.05in;
    display: inline-block;
  }
}

.adventurer-hp-tracker {

  font-size: $base;
  font-family: $font-body;
  list-style: none;
  text-align: right;
  display: block;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0in;
  right: $border;
  z-index: 99;
  font-size: $base;

  li {
    line-height: 1;
    padding-bottom: 4.3pt;
  }
}


/* ===== THE CARDS ===== */

.card {

  height: $height;
  width: $width;
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: bottom;
  background: white;
  font-family: $font-body;
  font-size: $base;
  color: $text-color;
  overflow: hidden;

  .contents {
    position: relative;
    height: 3.25in;
    width: 2.25in;
    margin-left: 0.125in;
  }

  header {

    position: relative;
    margin: $top-padding $edge 3pt $edge;

    .name {
      font-size: $large;
      font-family: $font-header;
      font-weight: 700;
      letter-spacing: -0.5pt;
      line-height: 1.15;
    }

    .health {

      position: absolute;
      top: -0.03in;
      right: 0;

      .svg {
        margin: 0;
        padding-left: 0.04in;
        margin-top: 0.04in;
        margin-bottom: -0.04in;
      }
    }
  }


  article {

    position: relative;
    clear: left;
    margin: 0 $edge $edge $edge;
    padding-top: 4pt;
    line-height: 1.2;

    .indicators {
      /* fixed height for this box for consistent card layout */
      height: .5in;
      font-weight: bold;
      text-align: center;
    }

    .abilitytext {

      display: table;
      height: 1.65in;
      width: 100%;

      .child {
        display: table-cell;
        vertical-align: middle;
      }
    }

    br {
      display: block;
      margin: 7px 0;
      content: "";
    }
  }

  footer {

    position: absolute;
    left: $edge; bottom: $border; right: $edge;
    height: $footer-height;
    font-size: $small;
    text-align: left;

    .flavortext {
      font-style: italic;
      position: absolute;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 999;
    }
  }

  &.horizontal {

    .contents {
      width: 3.5in - 2*$border;
      height: 2.5in - 2*$border;
      transform: rotate(90deg);
      transform-origin: 36% 48%; /* the magic raio??? */
      /*margin: $border;*/
      box-sizing: border-box;
      position: relative;
      margin-left: 0;
    }

    &.back {

      .contents {
        margin-left: .1in;
      }
    }

    header {
      padding-left: 16pt;
      padding-right: 16pt;
    }

    article {
      padding-left: 16pt;
      padding-right: 16pt;
    }

    footer {
      border-right: none;
      bottom: 0.25in;
      right: 0.315in;
      left: 16pt;
    }
  }

  &.Ability {

    header {

      padding: 0;
      text-align: center;

      .typeicon {

        position: absolute;
        left: -3pt;
        top: -2pt;

        svg {
          height: 1.3 * $icon-width;
          width: 1.3 * $icon-width;
        }
      }

      .classicon {

        position: absolute;
        right: -4pt;
        top: -2pt;

        svg {
          height: 1.3 * $icon-width;
          width: 1.3 * $icon-width;
        }
      }

      .name {
        padding-left: 20pt;
        padding-right: 19pt;
      }
    }

    article {

      .preamble {
        min-height: 0.65in;
        text-align: center;
      }

      .rng {
        min-height: 0.65in;
      }
    }

    footer {
      text-align: center;
    }
  }

  &.Helper {

    article {
      padding-top: 0.2in;
    }

    .inline_icon {

      height: 1.4 * $icon-width;
      line-height: 1.4 * $icon-width;
      margin-top: 0.055in;
      margin-bottom: -0.055in;

      .svg {
        height: 1.4 * $icon-width;
      }
    }

    br {
      display: block;
      margin: 0;
      padding: 0;
      height: 0.1in;
      line-height: 0in;
      content: "";
    }
  }

  &.Adventurer, &.Encounter {

    .flavortext {
      padding: 0 $padding;
    }

    &.bottomBar .flavortext {
      padding-bottom: 0.8*$padding;
    }
  }

  &.Adventurer {

    text-align: center;

    .adventurertext {
      margin-top: 0.25in;
    }

    footer {
      text-align: center;
      right: 0.1in;
      left: 0.1in;
    }
  }

  &.Encounter {

    svg {
      fill: $text-color-white;
      stroke: $text-color-white;
    }

    header {
      padding-right: 0;
    }

    article {
      .ongoing {
        margin-top: $base;
      }

      .surge {
        padding-top: $base;
      }
    }

    .health, .hp-tracker {
      color: #CFCFCF;
    }
  }

  &.Loot {

    text-align: center;

    &.tracker {

      article {
        padding: 0 0.15in;
      }

      .hp-tracker-vertical-right {
        top: 0.02in;
      }

      footer {

        bottom: 0.28in;

        .flavortext {
          padding: 0.8*$padding $padding;
        }
      }
    }

    footer {
      text-align: center;
    }
  }

  &.Helper {
    article {
      div {
        padding-bottom: 0.02in;
      }
    }
  }
}
/* ... */

